# awasmui

./: .gitignore  LICENSE.md  README.md  flutter_rust_bridge.yaml  gen_rust_bindings.sh  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/fiveeus/awasmui/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/rust/: Cargo.toml
lib/rust/src/: api.rs
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: awasmlib.podspec
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
